implement content upload and get contentpage

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,7 @@
 				config.MvcConfig
 				config.ControllerConfig
 				config.DaoConfig
+				config.ContentManagerConfig
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
