implements Authentication and web page optimization

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 		<error-code>404</error-code>
 		<location>/errorpage.jsp</location>
 	</error-page>
-	<!--security-constraint>
+	<security-constraint>
 
 		<web-resource-collection>
 
@@ -68,5 +68,5 @@
 
 		</user-data-constraint>
 
-	</security-constraint-->
+	</security-constraint>
 </web-app>
